Panel: Remove default 'title' value. Wizard: Add 'disableprevious', 'disabledone' properties to wizardstep Fix for issue: List UI is broken inside tab with animation type set to 'slide'

--- a/src/main/webapp/styles/less/wm-widgets.less
+++ b/src/main/webapp/styles/less/wm-widgets.less
@@ -2702,6 +2702,7 @@ If the height and width are not specified the video takes the height of the post
         height: 100%;
         width: 100%;
         overflow: inherit;
+        white-space: normal;
       }
     }
   }
